first go at homework

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/styles/index.css">
+    <script defer src="./Assets/js/index.js"></script>
     <title>JS Quiz</title>
 </head>
 <body>
@@ -11,6 +13,7 @@
     </header>
     <main>
         <section>
+            <button id="start-btn">Start</button>
             <p>Something there for now whatever</p>
         </section>
     </main>
