--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/styles/index.css">
-    <script defer src="./Assets/js/index.js"></script>
     <title>JS Quiz</title>
 </head>
+
 <body>
-    <header>
+    <div class="app">
         <h1>Welcome to JS Quiz</h1>
-    </header>
-    <main>
-        <section>
-            <button id="start-btn">Start</button>
-            <p>Something there for now whatever</p>
-        </section>
-    </main>
-    <footer>
-        <p>magellanrose</p>
-        nicholas
-    </footer>
+        <div class="quiz">
+            <h2 id="question">Question goes here</h2>
+            <div id="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+            <button id="next-btn">Next</button>
+        </div>
+    </div>
+<script src="./Assets/js/index.js"></script>
 </body>
+
 </html>
