--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <header class="row justify-between">
+        <a href="./highscores.html">Highscores</a>
+        <h3 id="time-output">Time: <span id="timer">60</span></h3>
+    </header>
     <div class="app">
         <h1>Welcome to JS Quiz</h1>
         <div class="quiz">
@@ -19,10 +23,12 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+            <input id="init-input" type="text">
             <button id="next-btn">Next</button>
         </div>
     </div>
-<script src="./Assets/js/index.js"></script>
+    <script src="./Assets/js/index.js"></script>
 </body>
+<footer> <a href="https://github.com/magellanrose">magellanrose</a></footer>
 
 </html>
